[HERI] adding singleton preference helper & update using AS 3.1

--- a/reclistapp/src/main/res/values/strings.xml
+++ b/reclistapp/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RecListApp</string>
+    <string name="label_tiga">LABEL TIGA</string>
+    <string name="label_dua">LABEL DUA</string>
 </resources>
